--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-"bot_token": "Bot Token",
+"bot_token": "MTA1NDEwNzUwMjk4NTM1NTMzNA.GE0ny-.zx99oZ7FyacXOW_q0yZRy7W7VlKl7s5ve3A0Rc",
 "prefix": "$",
-"channelnames": "Axe Runs Cord",
-"rolenames": "AXES RUNS CORD",
-"spam_text": ["@everyone Axes Runs Cord", "@everyone Boom! Get Nuked", "@everyone Axes Are Cool", "@everyone Beamed"]
+"channelnames": "JOIN NONGKRONG",
+"rolenames": "NONGKRONG",
+"spam_text": ["@everyone https://discord.gg/E5x7wnpj", "@everyone Boom! Get Nuked", "@everyone KE NONGKRONG BROK", "@everyone Beamed"]
 }
