--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"bot_token": "MTA1NDEwNzUwMjk4NTM1NTMzNA.GE0ny-.zx99oZ7FyacXOW_q0yZRy7W7VlKl7s5ve3A0Rc",
+"bot_token": "MTA1NDEwNzUwMjk4NTM1NTMzNA.GEQ4wE.7CqvJUNXzVeHy_TK67RUOFGl76rmCGB0Bj65i0",
 "prefix": "$",
 "channelnames": "JOIN NONGKRONG",
 "rolenames": "NONGKRONG",
